--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "realestate",
+  "name": "RealEstate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "18": "^0.0.0",
+    "@chakra-ui/react": "^1.6.8",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "axios": "^0.23.0",
+    "cross-env": "^7.0.3",
+    "framer-motion": "^4.1.17",
+    "millify": "^4.0.0",
+    "next": "11.1.2",
+    "nprogress": "^0.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-horizontal-scrolling-menu": "^2.3.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "babel-eslint": "^10.1.0",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2"
   }
 }
